--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Environment specific files
+.env.yml
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +16,7 @@
 
 # Go packages
 vendor/
+=======
+# OS generated files
+.DS_Store
+
